syntax = "proto3";
package api.v1;

message MsgCast1 {
  int32 col1 = 1;
  int32 col2 = 2;
}

message MsgCast2 {
  int64 col1 = 1;
  int64 col2 = 2;
}

message MsgCast3 {
  string col1 = 1;
  string col2 = 2;
}
